# pfs3

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-please-config.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release-please.yml  release.yml
aur/: PKGBUILD
aur/pfs3-fuse/: PKGBUILD
crates/libpfs3/: Cargo.toml  README.md
crates/libpfs3/fuzz/: Cargo.toml
crates/libpfs3/fuzz/fuzz_targets/: fuzz_direntry.rs  fuzz_rootblock.rs  fuzz_volume.rs  fuzz_writer.rs
crates/libpfs3/src/: anode.rs  bitmap.rs  cache.rs  dir.rs  error.rs  format.rs  io.rs  lib.rs  rdb.rs  util.rs  volume.rs  writer.rs
crates/libpfs3/src/ondisk/: direntry.rs  mod.rs  rootblock.rs
crates/libpfs3/tests/: advanced.rs  corrupt.rs  deldir.rs  fault.rs  fixtures.rs  format.rs  integration.rs  rdb.rs  read.rs  stress.rs  wave2.rs  wave3.rs  write.rs
crates/libpfs3/tests/fixtures/: pfs.7z  small.hdf
crates/pfs3-fuse/: Cargo.toml
crates/pfs3-fuse/src/: main.rs  types.rs
src/: main.rs
src/cmd/: cat.rs  check.rs  extract.rs  info.rs  ls.rs  mkfs.rs  mod.rs  protect.rs  tune.rs  write.rs
